# unzipDNA

./: .gitignore  CMakeLists.txt  README.md  build_project.bat  build_project.sh  exampleData.txt  main.cpp  out_exampleData.csv  out_exampleData.txt  out_exampleData_noLUT.txt  plot_result.py  result.txt  unzipDNA.py  utils.cpp
BPEnergy/: BPEnergy.cpp  BPEnergy.h  BPEnergy_constexpr.h
UnzipLUT/: LUT_constexpr.h  UnzipLUT.cpp  UnzipLUT.h
discarded/: DNAmech.h  main.cpp
include/: Constant.h  Constant_constexpr.h  DNA_util.h  DNAbp.h  DNAmech.h  DNAmech_constexpr.h  LUT_constexpr.h  Math_constexpr.h  Optimization.h  lut_lib.h  utils.h
reference/: unzipDNA.py
shared_libs/: constants_lib.h  math_lib.h  models_lib.h
src/: DNA_util.cpp  Optimization.cpp  main.cpp
